--- a/sprring-v2-ioc/pom.xml
+++ b/sprring-v2-ioc/pom.xml
@@ -5,15 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.example</groupId>
-  <artifactId>spring</artifactId>
+  <artifactId>sprring-v2-ioc</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <modules>
-    <module>spring-1.0</module>
-    <module>sprring-v2-ioc</module>
-  </modules>
-  <packaging>pom</packaging>
+  <packaging>war</packaging>
 
-  <name>spring Maven Webapp</name>
+  <name>sprring-v2-ioc Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -21,9 +17,37 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
+    <!-- dependency versions -->
+    <servlet.api.version>2.4</servlet.api.version>
   </properties>
 
   <dependencies>
+    <!-- requied start -->
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>${servlet.api.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- requied end -->
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.10</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.25</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
+    </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -33,7 +57,7 @@
   </dependencies>
 
   <build>
-    <finalName>spring</finalName>
+    <finalName>sprring-v2-ioc</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
